--- a/rate-cards/src/RateCard/RateCard.scss
+++ b/rate-cards/src/RateCard/RateCard.scss
@@ -1,9 +1,6 @@
 *,
 *::before,
 *::after {
-  // padding: 0;
-  // margin: 0;
-  // border: 0;
   box-sizing: border-box;
 }
 
@@ -29,7 +26,6 @@ body {
   color: rgb(105, 74, 59);
   font-family: "Times New Roman", Times, serif;
   background-color: rgb(243, 235, 223);
-  //cursor: pointer;
   scroll-behavior: smooth;
 }
 body._lock {
@@ -72,6 +68,33 @@ body._lock {
     margin: 15px;
     min-height: 700px;
   }
+  &__button {
+    border-radius: 37px;
+    margin: 10px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    letter-spacing: 0.2px;
+    padding: 2px 15px;
+    height: 30px;
+    text-decoration: none;
+    letter-spacing: 0.2px;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 105%;
+    text-transform: uppercase;
+    text-align: center;
+    color: rgb(105, 74, 59);
+    border: 0.1px solid rgb(105, 74, 59);
+    max-width: 100px;
+    background-color: beige;
+    cursor: pointer;
+  }
+  &__button:hover {
+    background: rgb(154, 114, 86);
+    color: rgba(229, 220, 210, 1);
+  }
 }
 
 .main__title {
@@ -95,11 +118,6 @@ body._lock {
   margin-bottom: 20px;
 }
 
-.cards-item:hover {
-  box-shadow: 5px 5px 5px #425b69;
-  transition: all 0.3s ease 0s;
-  outline: solid 4px #f08700;
-}
 
 .first {
   background-color: rgba(229, 220, 210, 1);
@@ -117,6 +135,9 @@ body._lock {
 .selected {
   transform: scale(1.05, 1.05);
   border: 3px solid #425b69;
+  box-shadow: 5px 5px 5px #425b69;
+  transition: all 0.3s ease 0s;
+  outline: solid 4px #f08700;
 }
 
 .cards-item {
